# LasVegas

./: CMakeLists.txt  README.md  index.pck
.github/workflows/: godot-web-export.yml
assets/shaders/: fragment.glsl  vertex.glsl
docs/: README.md  index.html  index.pck
godot/: .gitignore  README.md  export_presets.cfg  project.godot
godot/scenes/: main.tscn
godot/scripts/: enemy.gd  enemy.gd.uid  enterable_house.gd  game_manager.gd  game_manager.gd.uid  heartbeat_audio.gd  heartbeat_audio.gd.uid  level.gd  level.gd.uid  main.gd  main.gd.uid  player.gd  player.gd.uid
scripts/: patch_web_export.py
src/: main.cpp
src/app/: Game.cpp  Game.h
src/game/: Enemy.cpp  Enemy.h  Level.cpp  Level.h  Player.cpp  Player.h
src/platform/: Audio.cpp  Audio.h  Input.cpp  Input.h  Window.cpp  Window.h
src/renderer/: Camera.cpp  Camera.h  GLLoader.cpp  GLLoader.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
